--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
 
 <!-- Navbar (sit on top) -->
 <div class="w3-top ">
-  <div class="w3-bar " id="myNavbar" style="background-color: #e3ba19">
+  <div class="w3-bar " id="myNavbar" style="background-color: #F0E591">
 
     <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
       <i class="fa fa-bars"></i>
     </a>
 
-    <a href="#home" class="w3-bar-item w3-button">HOME</a>
-    <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-calendar"></i> ABOUT</a>
-    <a href="#cabins" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-home"></i>CABINS</a>
-    <a href="#payment" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-credit-card-alt"></i>PAYMENT</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> REGISTRATION</a>
+    <a href="#home" class="w3-bar-item w3-button w3-hover-yellow">HOME</a>
+    <a href="#about" class="w3-bar-item w3-button w3-hide-small w3-hover-yellow"><i class="fa fa-calendar"></i> ABOUT</a>
+    <a href="#cabins" class="w3-bar-item w3-button w3-hide-small w3-hover-yellow"><i class="fa fa-home"></i>CABINS</a>
+    <a href="#payment" class="w3-bar-item w3-button w3-hide-small w3-hover-yellow"><i class="fa fa-credit-card-alt"></i>PAYMENT</a>
+    <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-yellow"><i class="fa fa-envelope"></i> REGISTRATION</a>
     <!-- <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
       <i class="fa fa-search"></i> -->
     </a>
   </div>
 
   <!-- Navbar on small screens -->
-  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-    <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
-    <a href="#cabins" class="w3-bar-item w3-button" onclick="toggleFunction()">CABINS</a>
-    <a href="#payment" class="w3-bar-item w3-button" onclick="toggleFunction()">PAYMENT</a>
-    <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">REGISTRATION</a>
-    <a href="#" class="w3-bar-item w3-button"></a>
+  <div id="navDemo" class="w3-bar-block w3-khaki w3-hide w3-hide-large w3-hide-medium">
+    <a href="#about" class="w3-bar-item w3-button w3-hover-yellow" onclick="toggleFunction()">ABOUT</a>
+    <a href="#cabins" class="w3-bar-item w3-button w3-hover-yellow" onclick="toggleFunction()">CABINS</a>
+    <a href="#payment" class="w3-bar-item w3-button w3-hover-yellow" onclick="toggleFunction()">PAYMENT</a>
+    <a href="#contact" class="w3-bar-item w3-button w3-hover-yellow" onclick="toggleFunction()">REGISTRATION</a>
+    <a href="#" class="w3-bar-item w3-button w3-hover-yellow"></a>
     <!-- <a href="#" class="w3-bar-item w3-button">SEARCH</a> -->
   </div>
 </div>
@@ -48,7 +48,7 @@
 <!-- <img src="/img/high-res.png" alt="" class=" w3-image " style="width:75vw;height:80vh; "> -->
 
   </div>
-  <br>
+
 
   <!-- <img src="" class="w3-center w3-padding-large w3-#00000014 w3-border-radius
        w3-xlarge w3-wide w3-animate-opacity w3-hide-small" alt="" style="width:200px;height:75px;"> -->
@@ -70,18 +70,18 @@ All of your favorite parties are back for 2018, including: Represent KC, White L
 
 <h3>CRUISE INFORMATION</h3>
 
-<p>
-Mexican essence in a vacation hotel with luxury services and excellent facilities. What more can you ask for?
+<h5>
+<!-- Mexican essence in a vacation hotel with luxury services and excellent facilities. What more can you ask for? -->
 <br>
 <br>
-The Barceló Maya Tropical 5-star hotel is an oasis of fun and relaxation in the heart of Caribbean paradise. This luxury resort offers an extraordinary All-Inclusive experience. The fantastic hotel facilities feature green areas, a pool with hot tub, kid’s zones, games pool, gym, shopping center and an excellent U-Spa. Kids can also relax at the U-Kids Spa, and all guests can participate in sports like tennis, paddle tennis, basketball, snorkeling, kayaking or windsurfing. At night, they can enjoy the lively nightlife at the hotel.
+It’s hard to tell which onboard space best represents Carnival Splendor — they all seem to hint at the amazing time you’re going to have. El Morocco Lounge hosts comedy shows, musical performances, karaoke and more… and wears its 1930s namesake clearly on its nameplate. The words “Royal Flush Casino” incite visions of winning, while our onboard jazz club — The Cool — simply says it all without saying a word. And the Pinnacle Steakhouse can be found not only at the height of elegant dining, but at the actual apex of the ship.
 <br>
 <br>
-Located on one of the most impressive beaches of the Caribbean and surrounded by the legendary beauty of the Riviera Maya, the Barceló Maya Palace 5-star hotel is a spectacular luxury resort with exclusive services. All of its rooms are Junior Suites or Suites, all of which offer luxury details and comforts to guarantee an extraordinary experience.
+<!-- Located on one of the most impressive beaches of the Caribbean and surrounded by the legendary beauty of the Riviera Maya, the Barceló Maya Palace 5-star hotel is a spectacular luxury resort with exclusive services. All of its rooms are Junior Suites or Suites, all of which offer luxury details and comforts to guarantee an extraordinary experience. -->
 <br>
 <br>
-Who wouldn’t want to spend a few days in a resort with the Caribbean Sea as the backdrop?
-</p>
+<!-- Who wouldn’t want to spend a few days in a resort with the Caribbean Sea as the backdrop? -->
+</h5>
 
 <br>
 <br>
@@ -105,7 +105,7 @@ Who wouldn’t want to spend a few days in a resort with the Caribbean Sea as th
 
 
       <table class="w3-table w3-center w3-bordered w3-border">
-      <tr class='w3-light-blue'>
+      <tr class='w3-khaki'>
         <th>Day</th>
         <th>Port</th>
         <th>Events</th>
@@ -157,10 +157,11 @@ Who wouldn’t want to spend a few days in a resort with the Caribbean Sea as th
       <br>
       <br>
       <br>
-<h1>Barcelo Maya Tropical / Colonial</h1>
-<h6>Cabin Category And Pricing: All Prices Based On Occupancy</h6>
-<tr class="w3-light-blue">
-  <th>Cabin CATEGORY</th>
+
+<h1>Cabin Category And Pricing: All Prices Based On Occupancy</h1>
+<br>
+<tr class="w3-khaki">
+  <th>CABIN CATEGORY</th>
   <th>Single <br>(1 ADULT)</th>
   <th>Double <br>(2 ADULTS)</th>
   <th>Triple/Quad<br>(3 ADULTS)</th>
@@ -244,82 +245,6 @@ Who wouldn’t want to spend a few days in a resort with the Caribbean Sea as th
   </div>
 
 <br>
-<br>
-
-
-  <div class="w3-center w3-content w3-responsive">
-    <table class="w3-table w3-striped  w3-center w3-responsive">
-<h1>Barcelo Maya Palace</h1>
-<h6>Cabin Category And Pricing: All Prices Based On Occupancy</h6>
-<tr class="w3-light-blue">
-  <th>Cabin CATEGORY</th>
-  <th>Single <br>(1 ADULT)</th>
-  <th>Double <br>(2 ADULTS)</th>
-  <th>Triple/Quad<br>(3 ADULTS)</th>
-  <th>Child 2-12</th>
-<br>
-</tr>
-<tr>
-  <td>JUNIOR SUITE
-
-  </td>
-    <td>$702.00</td>
-    <td>$513.00 PER PERSON</td>
-    <td>$504.00 PER PERSON</td>
-    <td>$255.00 PER CHILD</td>
-
-
-
-</tr>
-
-<tr>
-  <td>*Cost Per Additional Night</td>
-  <td>$234.00</td>
-  <td>$171.00 PER PERSON</td>
-  <td>$168.00 PER PERSON</td>
-  <td>$85.00 PER CHILD</td>
-</tr>
-
-<td>JUNIOR SUITE POOL VIEW PREMIUM LEVEL</td>
-
-<td>$1,014.00</td>
-<td>$657.00 PER PERSON</td>
-<td>$648.00 PER PERSON</td>
-<td>255.00 PER CHILD</td>
-
-<tr>
-  <td>*Cost Per Additional Night</td>
-  <td>$338.00</td>
-  <td>$232.00 PER PERSON</td>
-  <td>$229.00 PER PERSON</td>
-  <td>$85.00 PER CHILD</td>
-</tr>
-
-<td style="color: red">JUNIOR SUITE OCEAN FRONT PREMIUM LEVEL -
-  <br>
-  SOLD OUT</td>
-
-<td>$1,152.00</td>
-<td>$723.00 PER PERSON</td>
-<td>$714.00 PER PERSON</td>
-<td>$255.00 PER CHILD</td>
-
-<tr>
-  <td style="color: red">*Cost Per Additional Night
-  <br>
-  SOLD OUT</td>
-
-  <td>$384.00</td>
-  <td>$241.00 PER PERSON</td>
-  <td>$238.00 PER PERSON</td>
-  <td>$85.00 PER CHILD</td>
-</tr>
-
-
-
-</table>
-<br>
-<button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-black" id="myBtn1">Premium Amenities - Click Here</button>
 
 <!-- The Modal -->
 <div id="myModal1" class="modal">
@@ -357,39 +282,19 @@ Who wouldn’t want to spend a few days in a resort with the Caribbean Sea as th
 
 </div>
 
-  </div>
-<br>
-  <div class="">
-    <p>Inclusions of the above rates:
-Hotel accommodations for June 21, 2018 through June 24, 2018
-All-Inclusive meal plan
-Taxes and gratuities
-
-Please note:
-Child rates are only valid when a minimum of 2 paying ADULTS are sharing the room
-Mandatory round-trip shared ride transfer rate of $38.00 PER PERSON is NOT included in the hotel rate quoted above.
-You MUST add the above transfer rate to your per personal total hotel stay – $38.00 PER PERSON WILL be added to your total package price.
-A valid passport is required for each person travelling to Mexico
-
-*All rates are based on US dollars and are only valid for citizens of the United States. Prior notification of any NON-US citizens travelling with the group will be required and may be subject to increased rates.
-*All room bedding requests are based on availability at time of check-in and are NOT GUARANTEED. Only bedding requests that are guaranteed are those room categories that specify the bedding in the name of the room category when purchased (i.e. Deluxe Double Room or Deluxe King Bed Room).</p>
-  </div>
-  <!-- <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
-  <p class="w3-wide"><i class="fa fa-camera"></i>Photography</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:90%">90%</div>
-  </div>
-  <p class="w3-wide"><i class="fa fa-laptop"></i>Web Design</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:85%">85%</div>
-  </div>
-  <p class="w3-wide"><i class="fa fa-photo"></i>Photoshop</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
-  </div> -->
+  </div> 
 </div>
 
-<div class="w3-row w3-center w3-dark-grey w3-padding-16">
+<div class="w3-padding">
+<ul>
+<li>SINGLE RATE: Single Occupancy fares are available upon request to guests within a specific category and will be charged at 200%.</li>
+<li>Cabins with 3rd or 4th persons: prices are ON REQUEST and also require a $250.00 PER PERSON deposit in full at the time of booking. Submit your form and we will contact you with current rates.</li>
+<li>Cabins listed as sold out: this means the rate shown above is no longer available, but the cabin type remains on request basis. If you are interested in a cabin category that is shown as sold out, please list in the note section and we will contact you with the current price if available.</li>
+<li>Ocean view cabins as well as cabin categories not listed on the website are on request basis.</li>
+</ul>
+</div>
+
+<div class="w3-row w3-center w3-deep-purple w3-padding-16">
   <div class="w3-quarter w3-section">
     <span class="w3-xlarge">White Linen Night</span><br>
     <!-- ROOMS -->
@@ -485,7 +390,7 @@ A valid passport is required for each person travelling to Mexico
 
 
 <table class="w3-table w3-centered w3-bordered w3-border">
-<tr class='w3-light-blue'>
+<tr class='w3-khaki'>
   <th>EASY PAYMENT PLAN</th>
   <th>AMOUNT DUE</th>
 </tr>
@@ -522,7 +427,7 @@ FULL ROOM DEPOSIT REQUIRED AT TIME OF BOOKING – meaning if you and roommates a
 <center><h1>Travel Protection Plan</h1>
 
   <table class="w3-table w3-centered w3-bordered w3-border">
-  <tr class='w3-light-blue'>
+  <tr class='w3-khaki'>
     <th>If total booking cost PER ADULT is:</th>
     <th>Cost PER ADULT</th>
     <th>Cost PER CHILD 12 and under</th>
@@ -587,7 +492,7 @@ FULL ROOM DEPOSIT REQUIRED AT TIME OF BOOKING – meaning if you and roommates a
 
      <p>All payments are non-refundable unless the Travel Protection Plan is purchased at the time of booking. The first deposit is non-refundable.</p>
     <table class="w3-table w3-striped w3-centered w3-border">
-<tr class="w3-light-blue">
+<tr class="w3-khaki">
   <th>BEGINNING DATE</th>
   <th>PENALTY AMOUNT</th>
   <!-- <th>Points</th> -->
@@ -713,11 +618,13 @@ FULL ROOM DEPOSIT REQUIRED AT TIME OF BOOKING – meaning if you and roommates a
 <div class="">
 
   <select class="w3-input w3-border w3-large" type="text" name="Room Type" required>
-    <option value="Maya Tropical / Colonial - SUPERIOR"> Maya Tropical / Colonial - SUPERIOR</option>
-    <option value="Maya Tropical / Colonial - JUNIOR SUITE OCEAN FRONT"> Maya Tropical / Colonial - JUNIOR SUITE OCEAN FRONT</option>
-    <option value="Maya Palace - JUNIOR SUITE"> Maya Palace - JUNIOR SUITE</option>
-    <option value="Maya Palace - JUNIOR SUITE POOL VIEW"> Maya Palace - JUNIOR SUITE POOL VIEW</option>
-    <option value=">Maya Palace - JUNIOR SUITE OCEAN FRONT" > Maya Palace - JUNIOR SUITE OCEAN FRONT</option>
+    <option value="Balcony Deck 7">Balcony</option>
+    <option value="Balcony Deck 8">Balcony</option>
+    <option value="Balcony Deck 9">Balcony</option>
+    <option value="Interior Deck 4">Interior</option>
+    <option value="Interior Deck 6">Interior</option>
+    <option value="Interior Deck 7">Interior</option>
+    <option value="Interior Deck 7">Interior</option>
   </select>
 
 </div>
@@ -803,7 +710,7 @@ GUEST INFO for guests using this card " required name="Message"> -->
 <h4>Card Information</h4>
 
 <div>
-<input class="w3-input w3-border" type="text" placeholder="Name on Credit Card" required name="Name on CC">
+<input class="w3-input w3-border" type="text"  size="24" placeholder="Name on Credit Card" required name="Name on CC">
 </div>
 <div class="">
 <input class="w3-input w3-border" type="text" placeholder="Credit Card Number" required name="CC Number">
@@ -860,8 +767,8 @@ GUEST INFO for guests using this card " required name="Message"> -->
 </div>
 
 <!-- Footer -->
-<footer class="w3-center w3-light-blue w3-padding-24 w3-opacity w3-hover-opacity-off">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up "></i>To the top</a>
+<footer class="w3-center w3-khaki w3-padding-24 w3-opacity w3-hover-opacity-off">
+  <a href="#home" class="w3-button w3-khaki"><i class="fa fa-arrow-up "></i>To the top</a>
 
 </footer>
 
@@ -901,9 +808,9 @@ window.onscroll = function() {myFunction()};
 function myFunction() {
     var navbar = document.getElementById("myNavbar");
     if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-        navbar.className = "w3-bar" + " w3-card" + " w3-animate-top" + " w3-white";
+        navbar.className = "w3-bar" + " w3-card" + " w3-animate-top" + " w3-khaki";
     } else {
-        navbar.className = navbar.className.replace(" w3-card w3-animate-top w3-white", "");
+        navbar.className = navbar.className.replace(" w3-card w3-animate-top w3-khaki", "");
     }
 }
 
