update info and images

--- a/index.html
+++ b/index.html
@@ -62,22 +62,23 @@
 
 All of your favorite parties are back for 2018, including: Represent KC, White Linen, 70’s Soul, 80’s Night and more!
     <br>
-    <br>
+
      September 15-22 on the Carnival Splendor!</h5>
 
 <br>
-<br>
 
-<h2>CRUISE INFORMATION</h2>
+
+
+<h2>Cruise Information</h2>
 
 <h5>
 
 It’s hard to tell which onboard space best represents Carnival Splendor — they all seem to hint at the amazing time you’re going to have. El Morocco Lounge hosts comedy shows, musical performances, karaoke and more… and wears its 1930s namesake clearly on its nameplate. The words “Royal Flush Casino” incite visions of winning, while our onboard jazz club — The Cool — simply says it all without saying a word. And the Pinnacle Steakhouse can be found not only at the height of elegant dining, but at the actual apex of the ship.
 <br>
-<br>
+
 <!-- Located on one of the most impressive beaches of the Caribbean and surrounded by the legendary beauty of the Riviera Maya, the Barceló Maya Palace 5-star hotel is a spectacular luxury resort with exclusive services. All of its rooms are Junior Suites or Suites, all of which offer luxury details and comforts to guarantee an extraordinary experience. -->
 <br>
-<br>
+
 <!-- Who wouldn’t want to spend a few days in a resort with the Caribbean Sea as the backdrop? -->
 </h5>
 
@@ -152,16 +153,14 @@ It’s hard to tell which onboard space best represents Carnival Splendor — th
 
   </div>
   <br>
-  <br>
-  <br>
+
 
   <div class=" w3-center w3-content w3-responsive" id="cabins" >
     <table align="center" class="w3-table w3-center w3-bordered w3-border" >
-      <br>
-      <br>
-      <br>
 
-<h1>Cabin Category And Pricing: All Prices Based On Occupancy</h1>
+
+
+<h1 class="w3-center">Cabin Category And Pricing: All Prices Based On Occupancy</h1>
 <br>
 <tr class="w3-khaki w3-center">
   <th>CATEGORY</th>
@@ -222,13 +221,28 @@ It’s hard to tell which onboard space best represents Carnival Splendor — th
 
 </table>
 
-
-
   </div>
 
   </div>
 </div>
 
+<div class="w3-center w3-padding w3-row-padding">
+
+  <div class="w3-col m4 w3-padding">
+    <img src="/img/SLISN.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"  alt="Interior Room">
+  </div>
+
+  <div class="w3-col m4 w3-padding">
+    <img src="/img/SLOBNB-1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Balcony Room">
+  </div>
+
+  <div class="w3-col m4 w3-padding">
+    <img src="/img/SLOSN.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Ocean View Room">
+  </div>
+
+</div>
+<br>
+<br>
 <div class="w3-padding">
 <ul>
 <li>SINGLE RATE: Single Occupancy fares are available upon request to guests within a specific category and will be charged at 200%. Single occupants require a $250.00 non-refundable deposit in full at the time of booking. </li>
@@ -281,8 +295,8 @@ It’s hard to tell which onboard space best represents Carnival Splendor — th
 
   <div class="w3-row-padding w3-center w3-section">
     <div class="w3-col m3">
-      <h3>Covered Pool</h3>
-      <img src="https://bloximages.chicago2.vip.townnews.com/cecildaily.com/content/tncms/assets/v3/editorial/9/79/9798c784-ec3d-11df-ac78-001cc4c03286/4cd9ab09a1c3c.image.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Covered Pool">
+      <h3>Movie Night</h3>
+      <img src="https://lh3.ggpht.com/UPZl7yFNlJLnLyRW4JX2euqLaLl7irhVPGIfe8SkMftdaRAUp18NzpnYh9rzvu233azAE51fmrgwxuTGpQhCRkYc7Q=s800" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Movie Night">
     </div>
 
     <div class="w3-col m3">
@@ -296,8 +310,8 @@ It’s hard to tell which onboard space best represents Carnival Splendor — th
     </div>
 
     <div class="w3-col m3">
-      <h3>Cabin</h3>
-      <img src="https://travel.usnews.com/static-travel/images/cruises/1/662/carnival-cruise-lines_carnival-splendor_CABIN_9101.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Balcony Cabin">
+      <h3>Mini Golf</h3>
+      <img src="/img/miniGolf.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Mini Golf">
     </div>
 
   </div>
@@ -464,8 +478,49 @@ Any registrations submitted after 04-01-2018 will require a $250.00 PER PERSON d
 <!-- Third Parallax Image with rooms Text -->
 <div class="bgimg-4 w3-display-container ">
   <div class="w3-display-middle">
-     <span class="w3-xxlarge w3-text-white w3-wide">???</span>
+     <span class="w3-xxlarge w3-text-white w3-wide"></span>
   </div>
+</div>
+
+
+<div class="w3-content w3-container w3-padding-64" >
+
+<div class="w3-row-padding w3-center">
+  <div class="w3-col m3">
+    <img src="/img/carnival-seaside-theater-1.jpg"; style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="seaside theater">
+  </div>
+
+  <div class="w3-col m3">
+    <img src="/img/dining-room-dinner-7-1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Dining Room">
+  </div>
+
+  <div class="w3-col m3">
+    <img src="/img/lido-restaurant-4-1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Lido Restaurant">
+  </div>
+
+  <div class="w3-col m3">
+    <img src="/img/lip-sync-battle-1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Lip Sync Battle">
+  </div>
+</div>
+
+<div class="w3-row-padding w3-center w3-section">
+  <div class="w3-col m3">
+    <img src="/img/playlist-productions-2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Show">
+  </div>
+
+  <div class="w3-col m3">
+    <img src="/img/playlist-productions-4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Show">
+  </div>
+
+  <div class="w3-col m3">
+    <img src="/img/punchliner-comedy-club-1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Comedy Club">
+  </div>
+
+  <div class="w3-col m3">
+    <img src="/img/serenity-2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Relaxing">
+  </div>
+</div>
+
 </div>
 
 <!-- Container (Contact Section) -->
@@ -491,9 +546,7 @@ Any registrations submitted after 04-01-2018 will require a $250.00 PER PERSON d
           <div class="w3-half">
             <input class="w3-input w3-border" type="text" placeholder="Last Name" required name="Last Name" required>
           </div>
-          <!-- <div class="w3-half">
-            <input class="w3-input w3-border" type="text" placeholder="Email" required name="email">
-          </div> -->
+      
           <div class="w3-half">
             <input class="w3-input w3-border" type="text" placeholder="Phone(XXX-XXX-XXXX)" required name="Phone" required>
           </div>
@@ -531,7 +584,7 @@ Any registrations submitted after 04-01-2018 will require a $250.00 PER PERSON d
   <input class="w3-input w3-border" type="text" placeholder="Total number of people in cabin" required name="Adults" required>
 </div>
 <div class="w3-half">
-  <input class="w3-input w3-border" type="text" placeholder="Total number of ADULTS wanting Travel Protection" required name="Travel Protection Adults" required>
+  <input class="w3-input w3-border" type="text" placeholder="Total number of people wanting Travel Protection" required name="Travel Protection Adults" required>
 </div>
 
 
@@ -553,10 +606,7 @@ Any registrations submitted after 04-01-2018 will require a $250.00 PER PERSON d
   </select>
 
 </div>
-<div class="w3-half">
-<br>
-  <input class="w3-input w3-border" type="text" placeholder="# of Additional Nights"  name="Additional Nights">
-</div>
+
 
 
 </div>
@@ -567,8 +617,8 @@ GUEST INFO for guests using this card " required name="Message"> -->
 
 
 
-  <h4>If you are rooming with someone who is paying for their own portion with a separate credit card, please list their name(s) here</h4>
-  <input class="w3-input w3-border" type="text" placeholder="Name of person paying for their portion of room seperately" name="Name of person paying for portion of room" >
+  <h4>If you are sharing a cabin with someone who is paying for their own portion of the cruise with a separate credit card, please list their name here.</h4>
+  <input class="w3-input w3-border" type="text" placeholder="Name of person paying for their portion of cabin seperately" name="Name of person paying for portion of cabin" >
 
 
 <br>
@@ -672,7 +722,7 @@ GUEST INFO for guests using this card " required name="Message"> -->
 <i class="fa fa-paper-plane"></i> SUBMIT
 </button>
 <input type="hidden" name="_next" value="https://formspree.io/thanks" />
-<input type="hidden" name="_subject" value="New Barcelo Reservation" />
+<input type="hidden" name="_subject" value="Magic Cruise Reservation" />
 </form>
 
 <h5>Please allow time for your card to be charged. You will receive a confirmation email within 72 business hours with complete details and your booking information once your payment is confirmed.</h5>
@@ -761,20 +811,20 @@ var span = document.getElementsByClassName("close")[0];
 var span1 = document.getElementsByClassName("close1")[0];
 
 // When the user clicks the button, open the modal
-btn.onclick = function() {
-    modal.style.display = "block";
-}
-btn1.onclick = function() {
-    modal1.style.display = "block";
-}
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-    modal.style.display = "none";
-    // modal1.style.display = "none";
-}
-span1.onclick = function() {
-    modal1.style.display = "none";
-}
+// btn.onclick = function() {
+//     modal.style.display = "block";
+// }
+// btn1.onclick = function() {
+//     modal1.style.display = "block";
+// }
+// // When the user clicks on <span> (x), close the modal
+// span.onclick = function() {
+//     modal.style.display = "none";
+//     // modal1.style.display = "none";
+// }
+// span1.onclick = function() {
+//     modal1.style.display = "none";
+// }
 
 // When the user clicks anywhere outside of the modal, close it
 // window.onclick = function(event) {
