--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@ It’s hard to tell which onboard space best represents Carnival Splendor — th
   <div class=" w3-center w3-content w3-responsive" id="cabins" >
     <table align="center" class="w3-table w3-center w3-bordered w3-border" >
 
-
-
+<br>
+<br>
 <h1 class="w3-center">Cabin Category And Pricing: All Prices Based On Occupancy</h1>
 <br>
 <tr class="w3-khaki w3-center">
@@ -227,17 +227,19 @@ It’s hard to tell which onboard space best represents Carnival Splendor — th
 </div>
 
 <div class="w3-center w3-padding w3-row-padding">
-
   <div class="w3-col m4 w3-padding">
-    <img src="/img/SLISN.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"  alt="Interior Room">
-  </div>
-
-  <div class="w3-col m4 w3-padding">
+    Balcony
     <img src="/img/SLOBNB-1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Balcony Room">
   </div>
 
   <div class="w3-col m4 w3-padding">
+    Ocean View
     <img src="/img/SLOSN.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Ocean View Room">
+  </div>
+
+  <div class="w3-col m4 w3-padding">
+    Interior
+    <img src="/img/SLISN.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"  alt="Interior Room">
   </div>
 
 </div>
@@ -487,7 +489,7 @@ Any registrations submitted after 04-01-2018 will require a $250.00 PER PERSON d
 
 <div class="w3-row-padding w3-center">
   <div class="w3-col m3">
-    <img src="/img/carnival-seaside-theater-1.jpg"; style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="seaside theater">
+    <img src="/img/carnival-seaside-theater-1.jpg"; style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Seaside Theater">
   </div>
 
   <div class="w3-col m3">
@@ -505,11 +507,11 @@ Any registrations submitted after 04-01-2018 will require a $250.00 PER PERSON d
 
 <div class="w3-row-padding w3-center w3-section">
   <div class="w3-col m3">
-    <img src="/img/playlist-productions-2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Show">
+    <img src="/img/playlist-productions-2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quality Entertainment">
   </div>
 
   <div class="w3-col m3">
-    <img src="/img/playlist-productions-4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Show">
+    <img src="/img/playlist-productions-4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quality Entertainment">
   </div>
 
   <div class="w3-col m3">
@@ -526,7 +528,7 @@ Any registrations submitted after 04-01-2018 will require a $250.00 PER PERSON d
 <!-- Container (Contact Section) -->
 <div class="w3-content w3-container w3-padding-24 w3-center" id="contact">
   <br>
-  <br>
+
   <h1 class="w3-center">Registration</h1>
 
     <div class="w3-col m12 w3-panel ">
@@ -546,7 +548,7 @@ Any registrations submitted after 04-01-2018 will require a $250.00 PER PERSON d
           <div class="w3-half">
             <input class="w3-input w3-border" type="text" placeholder="Last Name" required name="Last Name" required>
           </div>
-      
+
           <div class="w3-half">
             <input class="w3-input w3-border" type="text" placeholder="Phone(XXX-XXX-XXXX)" required name="Phone" required>
           </div>
