--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ It’s hard to tell which onboard space best represents Carnival Splendor — th
     </div> -->
 
 
-    <h1> Iternerary and Events</h1>
+    <h1> Itinerary and Events</h1>
 
 
       <table class="w3-table w3-center w3-bordered w3-border">
