update last port

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ It’s hard to tell which onboard space best represents Carnival Splendor — th
       <tr>
         <td>Saturday 9/21</td>
         <td>Los Angeles (Long Beach), California </td>
-        <td></td>
+        <td>Return to Port</td>
       </tr>
 
       </table>
