update Xstream logo

--- a/index.html
+++ b/index.html
@@ -45,8 +45,6 @@
     <!-- <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity ">Paycation <span class="w3-hide-small">Experience</span> 2018</span> -->
       <!-- <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity ">Paycation <span class="w3-hide-small">Experience</span> 2018</span> -->
 
-<!-- <img src="/img/high-res.png" alt="" class=" w3-image " style="width:75vw;height:80vh; "> -->
-
   </div>
 
 
@@ -57,7 +55,7 @@
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64 w3-center " id="about">
   <h1 class="w3-center">Trip Information</h1>
-  <!-- <p class="w3-center"><em>I love photography</em></p> -->
+
   <h5>Magic 107.3 would like to personally invite you to cruise with us in 2018. This year’s cruise features 4 NEW ports – Long Beach, California, Cabo San Lucas, Mazatlán and Puerto Vallarta, Mexico! Cabo San Lucas and Puerto Vallarta feature extended hours in port, allowing you to relax and enjoy longer experiences in these all new ports!
 
 All of your favorite parties are back for 2018, including: Represent KC, White Linen, 70’s Soul, 80’s Night and more!
@@ -730,6 +728,8 @@ GUEST INFO for guests using this card " required name="Message"> -->
 <h5>Please allow time for your card to be charged. You will receive a confirmation email within 72 business hours with complete details and your booking information once your payment is confirmed.</h5>
 </div>
 
+<img src="https://secure.xstreamtravel.com/img/footer-logo.png" class="w3-center w3-padding-large w3-#00000014 w3-border-radius
+     w3-xlarge w3-wide w3-animate-opacity w3-hide-small" alt="" style="width:300px;height:100px;">
 
   </div>
 
