--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@ GUEST INFO for guests using this card " required name="Message"> -->
 <input class="w3-input w3-border" type="text"  size="24" placeholder="Name on Credit Card" required name="Name on CC">
 </div>
 <div class="">
-<input class="w3-input w3-border" type="text" placeholder="Credit Card Number" required name="CC Number">
+<input class="w3-input w3-border" type="text" size="24"  minlength="16" maxlength="16" placeholder="Credit Card Number" required name="CC Number">
 </div>
 <div class="">
 <input class="w3-input w3-border" type="text" placeholder="Credit Card Expiration Date (MM/YY)" required name="CC Exp.">
