updates to travel insurance option

--- a/index.html
+++ b/index.html
@@ -583,12 +583,34 @@ Any registrations submitted after 04-01-2018 will require a $250.00 PER PERSON d
 <div class="w3-half">
   <input class="w3-input w3-border" type="text" placeholder="Total number of people in cabin" required name="Adults" required>
 </div>
-<div class="w3-half">
+<!-- <div class="w3-half">
   <input class="w3-input w3-border" type="text" placeholder="Total number of people wanting Travel Protection" required name="Travel Protection Adults" required>
+</div> -->
+<br>
+<br>
+<div class="w3-col">
+
+<p class="w3-input w3-border" type="text" required > Do you want to purchase travel insurance?
+</p>
+</div>
+
+<div class="">
+
+<select class="w3-input w3-border w3-large" type="text" name="Travel Insurance" required>
+  <option value="No">No</option>
+  <option value="Yes">Yes</option>
+
+
+</select>
+
 </div>
 
 
-<div class="w3-half">
+
+
+
+
+<div class="w3-col">
   <p class="w3-input w3-border" type="text" required > Cabin Category Selection
   </p>
 </div>
