updating cancellation policy

--- a/index.html
+++ b/index.html
@@ -428,7 +428,11 @@ Any registrations submitted after 04-01-2018 will require a $250.00 PER PERSON d
 
 <h1 class="w3-center">CANCELLATIONS</h1>
 
-     <p>All payments are non-refundable unless the Travel Protection Plan is purchased at the time of booking. The first deposit is non-refundable.</p>
+     <p>All payments are non-refundable unless the Travel Protection Plan is purchased at the time of booking. The first deposit is non-refundable.
+
+     <br>
+      There will be a $150 per person administation fee for all cancellations along with any fees that will be incurred by Carnvial Cruise Lines
+   </p>
     <table class="w3-table w3-striped w3-centered w3-border">
 <tr class="w3-khaki">
   <th>BEGINNING DATE</th>
