updating decks for cabins

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ It’s hard to tell which onboard space best represents Carnival Splendor — th
 
   </td>
     <td>BALCONY</td>
-    <td>DECK</td>
+    <td>DECK 7 / DECK 8</td>
     <td>$866.25 PER PERSON</td>
 
 </tr>
@@ -180,14 +180,14 @@ It’s hard to tell which onboard space best represents Carnival Splendor — th
 <tr>
   <td>8B</td>
   <td>BALCONY</td>
-  <td>DECK</td>
+  <td>DECK 6 / DECK 7</td>
   <td>$871.25 PER PERSON</td>
 </tr>
 
 <tr>
   <td>6B</td>
   <td>OCEAN VIEW</td>
-  <td>DECK</td>
+  <td>DECK 1 / DECK 2</td>
   <td>$656.25 PER PERSON</td>
 
 </tr>
@@ -195,7 +195,7 @@ It’s hard to tell which onboard space best represents Carnival Splendor — th
 <tr>
   <td>4F</td>
   <td>INTERIOR</td>
-  <td>DECK</td>
+  <td>DECK 6 / DECK 7</td>
   <td>$596.25 PER PERSON</td>
 
 </tr>
@@ -203,7 +203,7 @@ It’s hard to tell which onboard space best represents Carnival Splendor — th
 <tr>
   <td>4D</td>
   <td>INTERIOR</td>
-  <td>DECK</td>
+  <td>DECK 6</td>
   <td>$586.25 PER PERSON</td>
 
 </tr>
@@ -211,7 +211,7 @@ It’s hard to tell which onboard space best represents Carnival Splendor — th
 <tr>
   <td>4B</td>
   <td>INTERIOR</td>
-  <td>DECK</td>
+  <td>DECK 1 / DECK 2</td>
   <td>$566.25 PER PERSON</td>
 
 </tr>
