--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <a href="#about" class="w3-bar-item w3-button w3-hide-small w3-hover-yellow"><i class="fa fa-calendar"></i> ABOUT</a>
     <a href="#cabins" class="w3-bar-item w3-button w3-hide-small w3-hover-yellow"><i class="fa fa-home"></i>CABINS</a>
     <a href="#payment" class="w3-bar-item w3-button w3-hide-small w3-hover-yellow"><i class="fa fa-credit-card-alt"></i>PAYMENT</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-yellow"><i class="fa fa-envelope"></i> REGISTRATION</a>
+    <a href="#Registration" class="w3-bar-item w3-button w3-hide-small w3-hover-yellow"><i class="fa fa-envelope"></i> REGISTRATION</a>
     <!-- <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
       <i class="fa fa-search"></i> -->
     </a>
@@ -33,7 +33,7 @@
     <a href="#about" class="w3-bar-item w3-button w3-hover-yellow" onclick="toggleFunction()">ABOUT</a>
     <a href="#cabins" class="w3-bar-item w3-button w3-hover-yellow" onclick="toggleFunction()">CABINS</a>
     <a href="#payment" class="w3-bar-item w3-button w3-hover-yellow" onclick="toggleFunction()">PAYMENT</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-hover-yellow" onclick="toggleFunction()">REGISTRATION</a>
+    <a href="#Registration" class="w3-bar-item w3-button w3-hover-yellow" onclick="toggleFunction()">REGISTRATION</a>
     <a href="#" class="w3-bar-item w3-button w3-hover-yellow"></a>
 
   </div>
@@ -517,7 +517,7 @@ Any registrations submitted after 04-01-2018 will require a $250.00 PER PERSON d
 </div>
 
 <!-- Container (Contact Section) -->
-<div class="w3-content w3-container w3-padding-24 w3-center" id="contact">
+<div class="w3-content w3-container w3-padding-24 w3-center" id="Registration">
   <br>
 
   <h1 class="w3-center">Registration</h1>
