--- a/index.html
+++ b/index.html
@@ -159,12 +159,13 @@ It’s hard to tell which onboard space best represents Carnival Splendor — th
 
 </tr>
 <tr>
-  <td>8C
+  <td style="color: red">8C
 
   </td>
-    <td>BALCONY</td>
-    <td>DECK 7 / DECK 8</td>
-    <td>$866.25 PER PERSON</td>
+    <td style="color: red">BALCONY</td>
+    <td style="color: red">DECK 7 / DECK 8</td>
+    <td style="color: red">SOLD OUT - Prices On Request</td>
+    <!-- <td>$866.25 PER PERSON</td> -->
 
 </tr>
 
@@ -607,7 +608,7 @@ Any registrations submitted after 04-01-2018 will require a $250.00 PER PERSON d
 <div class="">
 
   <select class="w3-input w3-border w3-large" type="text" name="Room Type" required>
-    <option value="Balcony 8C">Balcony 8C</option>
+    <!-- <option value="Balcony 8C" >Balcony 8C</option> -->
     <option value="Balcony 8B">Balcony 8B</option>
     <option value="Ocean View 6B">Ocean View 6B</option>
     <option value="Interior 4F">Interior 4F</option>
