--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <link rel="stylesheet" href="styles.css">
 
 <body ng-controller="homeCtrl">
-
+<header>
+  <link rel="shortcut icon" href="">
+</header>
 <!-- Navbar (sit on top) -->
 <div class="w3-top ">
   <div class="w3-bar " id="myNavbar" style="background-color: #F0E591">
