preping for next sold out room

--- a/index.html
+++ b/index.html
@@ -74,10 +74,8 @@ All of your favorite parties are back for 2018, including: Represent KC, White L
 It’s hard to tell which onboard space best represents Carnival Splendor — they all seem to hint at the amazing time you’re going to have. El Morocco Lounge hosts comedy shows, musical performances, karaoke and more… and wears its 1930s namesake clearly on its nameplate. The words “Royal Flush Casino” incite visions of winning, while our onboard jazz club — The Cool — simply says it all without saying a word. And the Pinnacle Steakhouse can be found not only at the height of elegant dining, but at the actual apex of the ship.
 <br>
 
-<!-- Located on one of the most impressive beaches of the Caribbean and surrounded by the legendary beauty of the Riviera Maya, the Barceló Maya Palace 5-star hotel is a spectacular luxury resort with exclusive services. All of its rooms are Junior Suites or Suites, all of which offer luxury details and comforts to guarantee an extraordinary experience. -->
 <br>
 
-<!-- Who wouldn’t want to spend a few days in a resort with the Caribbean Sea as the backdrop? -->
 </h5>
 
 
@@ -172,10 +170,10 @@ It’s hard to tell which onboard space best represents Carnival Splendor — th
 </tr>
 
 <tr>
-  <td>8B</td>
-  <td>BALCONY</td>
-  <td>DECK 6 / DECK 7</td>
-  <td>$871.25 PER PERSON</td>
+  <td style="color: red">8B</td>
+  <td style="color: red">BALCONY</td>
+  <td style="color: red">DECK 6 / DECK 7</td>
+  <td style="color: red"> SOLD OUT -$871.25 PER PERSON</td>
 </tr>
 
 <tr>
