update on sold out cabin

--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@ It’s hard to tell which onboard space best represents Carnival Splendor — th
   <td style="color: red">8B</td>
   <td style="color: red">BALCONY</td>
   <td style="color: red">DECK 6 / DECK 7</td>
-  <td style="color: red"> SOLD OUT -$871.25 PER PERSON</td>
+  <td style="color: red"> SOLD OUT - Prices On Request</td>
+  <!-- <td style="color: red"> SOLD OUT -$871.25 PER PERSON</td> -->
 </tr>
 
 <tr>
