--- a/index.html
+++ b/index.html
@@ -178,10 +178,10 @@ It’s hard to tell which onboard space best represents Carnival Splendor — th
 </tr>
 
 <tr>
-  <td>6B</td>
-  <td>OCEAN VIEW</td>
-  <td>DECK 1 / DECK 2</td>
-  <td>$656.25 PER PERSON</td>
+  <td style="color: red">6B</td>
+  <td style="color: red">OCEAN VIEW</td>
+  <td style="color: red">DECK 1 / DECK 2</td>
+  <td style="color: red">SOLD OUT - Prices on Request $656.25 PER PERSON</td>
 
 </tr>
 
@@ -611,7 +611,7 @@ Any registrations submitted after 04-01-2018 will require a $250.00 PER PERSON d
   <select class="w3-input w3-border w3-large" type="text" name="Room Type" required>
     <option value="Balcony 8C" >Balcony 8C - Sold Out - Prices on Request</option>
     <option value="Balcony 8B">Balcony 8B - Sold Out - Prices on Request</option>
-    <option value="Ocean View 6B">Ocean View 6B</option>
+    <option value="Ocean View 6B">Ocean View - Sold Out6B</option>
     <option value="Interior 4F">Interior 4F</option>
     <option value="Interior 4D">Interior 4D</option>
     <option value="Interior 4B">Interior 4B</option>
