updates to pricing

--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@ It’s hard to tell which onboard space best represents Carnival Splendor — th
 
 <br>
 <br>
-<h1 class="w3-center">Cabin Category And Pricing: All Prices Based On Occupancy</h1>
+<h1 class="w3-center">Cabin Category And Pricing</h1>
 <br>
 <tr class="w3-khaki w3-center">
   <th>CATEGORY</th>
   <th>CABIN TYPE</th>
   <th>LOCATION</th>
-  <th>TYPE</th>
+  <th>PRICE - (Based On Double Occupancy)</th>
 
 </tr>
 <tr>
