--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ It’s hard to tell which onboard space best represents Carnival Splendor — th
   <td style="color: red">6B</td>
   <td style="color: red">OCEAN VIEW</td>
   <td style="color: red">DECK 1 / DECK 2</td>
-  <td style="color: red">SOLD OUT - Prices on Request $656.25 PER PERSON</td>
+  <td style="color: red">SOLD OUT - Prices on Request</td>
 
 </tr>
 
