--- a/index.html
+++ b/index.html
@@ -186,10 +186,10 @@ It’s hard to tell which onboard space best represents Carnival Splendor — th
 </tr>
 
 <tr>
-  <td>4F</td>
-  <td>INTERIOR</td>
-  <td>DECK 6 / DECK 7</td>
-  <td>$596.25 PER PERSON</td>
+  <td style="color: red">4F</td>
+  <td style="color: red">INTERIOR</td>
+  <td style="color: red">DECK 6 / DECK 7</td>
+  <td style="color: red">SOLD OUT - Prices on Request</td>
 
 </tr>
 
