--- a/index.html
+++ b/index.html
@@ -611,8 +611,8 @@ Any registrations submitted after 04-01-2018 will require a $250.00 PER PERSON d
   <select class="w3-input w3-border w3-large" type="text" name="Room Type" required>
     <option value="Balcony 8C" >Balcony 8C - Sold Out - Prices on Request</option>
     <option value="Balcony 8B">Balcony 8B - Sold Out - Prices on Request</option>
-    <option value="Ocean View 6B">Ocean View - Sold Out6B</option>
-    <option value="Interior 4F">Interior 4F</option>
+    <option value="Ocean View 6B">Ocean View 6B - Sold Out - Prices on Request</option>
+    <option value="Interior 4F">Interior 4F - Sold Out - Prices on Request</option>
     <option value="Interior 4D">Interior 4D</option>
     <option value="Interior 4B">Interior 4B</option>
 
