update zip file

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ It’s hard to tell which onboard space best represents Carnival Splendor — th
     </div>
 
     <div class="w3-col m3">
-      <h3>80's Party</h3>
+      <h3>80's Dance Party</h3>
       <img src="/img/80S.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="80's Party">
     </div>
 
